--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,18 +56,7 @@ _________                  .___
   <div id="page-wrapper">
 {% include navigation.html %}
 {{ content }}
-  <!-- Footer -->
-  <footer id="footer">
-      <ul class="icons">
-        <li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-        <li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-        <li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-        <li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
-      </ul>
-      <ul class="copyright">
-        <li>&copy; Pauvre Coude Some rights reserved.</li><li><a href="https://github.com/Basspistol/pauvrecoude">Webcreds </a></li>
-      </ul>
-    </footer>
+{% include footer.html %}
 {% include scripts.html %}
   </div>
   </body>
