--- a/_includes/contactform.html
+++ b/_includes/contactform.html
@@ -7,8 +7,8 @@
 								Promis y sera bien traité
 							</p>
 						</header>
-            <form method="post" action="{{ site.baseurl }}/contact-success/" class="cta">
-              <input type="hidden" name="_to" value="pauvrecoude+basspistol@gmail.com" />
+            <form method="post" action="https://pauvrecoude.bandcamp.com" class="cta">
+              <input type="hidden" name="_to" value="vallotton.bastien+basspistol@gmail.com" />
               <input type="text" name="_gotcha" style="display: none;" />
 							<div class="row gtr-uniform gtr-50">
 								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Ton courriel tentends?" required /></div>
