--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
       <li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li> -->
     </ul>
     <ul class="copyright">
-      <li>&copy;  {{ site.time | date: "%Y" }} Pauvre Coude Some rights reserved.</li><li><a href="https://github.com/Basspistol/pauvrecoude">Webcreds </a></li>
+      <li>&copy;  {{ site.time | date: "%Y" }} Pauvre Coude Some rights reserved.</li><li><a href="https://github.com/Basspistol/Pauvre-Coude-Web/blob/master/README.md" target="_blank">Webcreds </a></li>
     </ul>
   </footer>
   
