--- a/_includes/contactform.html
+++ b/_includes/contactform.html
@@ -7,7 +7,7 @@
 								Promis y sera bien traité
 							</p>
 						</header>
-            <form method="post" action="https://pauvrecoude.bandcamp.com" class="cta">
+            <form method="post" action="/contact-success/" class="cta">
               <input type="hidden" name="_to" value="vallotton.bastien+basspistol@gmail.com" />
               <input type="text" name="_gotcha" style="display: none;" />
 							<div class="row gtr-uniform gtr-50">
